Parser/test_cases/good/caseonebranch.cl
class Test {
  foo:Test;
  bar():Int { case foo.bar() of y:Int => 3; esac };
};
