Parser/test_cases/bad/multipleexpressions.cl
class Test {
  foo:Test;
  bar():Int {{5;Object;4;}};
};
